2008-10-10  Fabrice Rossi  <Fabrice dot Rossi at apiacoa dot org>

	* man/batchsom.kernelmatrix.Rd: new documentation

	* man/sominit.random.Rd: applies also to kernelmatrix

	* man/sominit.pca.kernelmatrix.Rd: new documentation

	* R/kernel.R (as.kernelmatrix.matrix): added symmetry test and matrix class check

	* man/as.kernelmatrix.Rd: new documentation

	* R/kernel.R (predict.kernelsom): added positivity check

	* R/quality.R (error.kaskilagus.kernelsom): changed parameter name for consistency with predict
	(KaskiLagus.kernelsom): changed parameter name for consistency with predict
	(error.kaskilagus.kernelsom): check for missing parameter

	* man/error.kaskilagus.kernelsom.Rd: new documentation

	* R/quality.R (error.quantisation.kernelsom): changed parameter name for consistency with predict

	* man/error.quantisation.kernelsom.Rd: new documentation

2008-10-08  Fabrice Rossi  <Fabrice dot Rossi at apiacoa dot org>

	* man/as.dist.kernelsom.Rd: new focumentation

	* man/as.dist.relationalsom.Rd: fixed a typo

	* R/kernel.R (predict.kernelsom): bug fix: used clusters instead of bmu
	bug fix: wrong column ordering
	added a parameter for computing the real quantisation error

	* man/predict.kernelsom.Rd: new documentation

	* man/print.som.Rd: covers now kernel som

	* man/prototype.distances.Rd: added documentation for the check parameter. 

	* NAMESPACE: corrected broken declaration for kernelsom methods

	* src/som.c (batch_som_optim): removed unused variables and fixed initialization warning
	(batch_som): removed unused variables and fixed initialization warning

	* tests/kernel.R: new file: high level test for identical behavior of kernel som and classical som

	* tests/relational.R: new file: high level test for identical behavior of relational som and classical som

	* R/kernel.R (kernelsom.lowlevel.R): fixed the same bug as in the relational som: when the internal loop is not converging, the neighborhood values mus be updated
